--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -2,15 +2,25 @@
 <div>
     <div class="container mt-5" id="container">
         <div class="form-container sign-in-container">
-            <form action="profile" (ngSubmit)="onSubmit()">
+            <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <!-- <img src="../../../assets/images/logos/logo-dan.png" alt="Dantech"> -->
-                <h1>Admin login</h1>
+                <h1>Sign in</h1>
                 <!-- <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
                 </div>
                 <span>or use your account</span> -->
-                <input type="email" placeholder="Email" />
-                <input type="password" placeholder="Password" />
+                <input type="email" formControlName="email"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" placeholder="Email" />
+                <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
+                    <div *ngIf="f['email'].errors && f['email'].errors['required']">Username is required</div>
+                 </div>
+
+
+                <input type="password"  formControlName="password"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" placeholder="Password" />
+                <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
+                    <div *ngIf="f['password'].errors && f['password'].errors['required']">Password  is required</div>
+                 </div>
+
+
                 <a href="#">Forgot your password?</a>
                 <button type="submit">Sign In</button>
             </form>
