--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="form-container sign-in-container">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <!-- <img src="../../../assets/images/logos/logo-dan.png" alt="Dantech"> -->
-                <h1>Sign in</h1>
+                <h1>Admin login</h1>
                 <!-- <div class="social-container">
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
                 </div>
@@ -22,6 +22,7 @@
 
 
                 <a href="#">Forgot your password?</a>
+                <p class="p-0 m-0" style="font-style: italic;color: #ff0000;font-size: small;" *ngIf="loginError">Invalid email or password</p>
                 <button type="submit">Sign In</button>
             </form>
         </div>
