--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,6 +1,10 @@
 <!-- authentication.component.html -->
 <div>
-    <div class="container mt-5" id="container">
+    <h1 class="title"><img src="https://www.dantechdentallab.com/wp-content/uploads/2023/08/header-logo.webp"
+            width="200px">
+    </h1>
+
+    <div class="container" id="container">
         <div class="form-container sign-in-container">
             <form [formGroup]="form" (ngSubmit)="onSubmit()">
                 <!-- <img src="../../../assets/images/logos/logo-dan.png" alt="Dantech"> -->
@@ -9,30 +13,31 @@
                     <a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
                 </div>
                 <span>or use your account</span> -->
-                <input type="email" formControlName="email"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" placeholder="Email" />
+                <input type="email" formControlName="email" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f['email'].errors }" placeholder="Email" />
                 <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
                     <div *ngIf="f['email'].errors && f['email'].errors['required']">Username is required</div>
-                 </div>
+                </div>
 
 
-                <input type="password"  formControlName="password"  class="form-control" [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" placeholder="Password" />
+                <input type="password" formControlName="password" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" placeholder="Password" />
                 <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
-                    <div *ngIf="f['password'].errors && f['password'].errors['required']">Password  is required</div>
-                 </div>
+                    <div *ngIf="f['password'].errors && f['password'].errors['required']">Password is required</div>
+                </div>
 
 
                 <a href="#">Forgot your password?</a>
-                <p class="p-0 m-0" style="font-style: italic;color: #ff0000;font-size: small;" *ngIf="loginError">Invalid email or password</p>
+                <p class="p-0 m-0" style="font-style: italic;color: #ff0000;font-size: small;" *ngIf="loginError">
+                    Invalid email or password</p>
                 <button type="submit">Sign In</button>
             </form>
         </div>
         <div class="overlay-container">
             <div class="overlay">
                 <div class="overlay-panel overlay-right">
-                    <h1 class="title"><img
-                            src="https://www.dantechdentallab.com/wp-content/uploads/2023/08/header-logo.webp"
-                            width="200px">
-                    </h1>
+                    <h1>Welcome Admin!</h1>
+                    <p>Please login with admin credentials</p>
                 </div>
             </div>
         </div>
