--- a/src/app/userapproval/checklist/checklist.component.scss
+++ b/src/app/userapproval/checklist/checklist.component.scss
@@ -55,15 +55,15 @@ input:checked~.checkbox {
     transition: all 0.2s cubic-bezier(0, 0.01, 0.23, 0.8);
 }
 
-.container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-        0 10px 10px rgba(0, 0, 0, 0.22);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 100%;
-    // margin-top: 5%;
-}
+// .container {
+//     background-color: #fff;
+//     border-radius: 10px;
+//     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+//         0 10px 10px rgba(0, 0, 0, 0.22);
+//     position: relative;
+//     overflow: hidden;
+//     width: 768px;
+//     max-width: 100%;
+//     min-height: 100%;
+//     // margin-top: 5%;
+// }
