--- a/src/app/userapproval/pendingusers/pendingusers.component.html
+++ b/src/app/userapproval/pendingusers/pendingusers.component.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col">
                 <input class="form-control" type="text" name="search" [(ngModel)]="searchText"
-                    (ngModelChange)="filterData()" autocomplete="off" placeholder="Find your orders">
+                    (ngModelChange)="filterData()" autocomplete="off" placeholder="Find users">
             </div>
             <!-- <div class="col-1">
                 <button class="btn btn-primary btn-sm" (click)="exportToCSV()"><i class="bi bi-download"></i></button>
