--- a/src/app/userapproval/checklist/checklist.component.html
+++ b/src/app/userapproval/checklist/checklist.component.html
@@ -1,117 +1,149 @@
 <section *ngFor='let ts of clinicdatalist'>
+    <form>
+        <div class="card">
+            <div class="card-body">
+                <!-- title -->
+                <h4 class="card-title">Clinic approval form</h4>
+                <h5 class="card-subtitle">Organisation details</h5>
 
-    <div class="card">
-        <div class="card-body ">
-            <div class="d-md-flex">
-                <div>
-                    <h4 class="card-title">Clinic approval form</h4>
-                    <h5 class="card-subtitle text-muted">Organization details</h5>
+
+                <div class="table-responsive">
+                    <table class="table align-middle">
+                        <thead>
+                            <tr>
+                                <th class="text-dark font-medium fs-4">S.no</th>
+                                <th class="text-dark font-medium fs-4">Title</th>
+                                <th class="text-dark font-medium fs-4">Information</th>
+                                <th class="text-dark font-medium fs-4">Actions</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>
+                                    <h4 class="card-title">Image</h4>
+                                </td>
+                                <td>Image</td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>
+                                    <h4 class="card-title">Email</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.email}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>
+                                    <h4 class="card-title">Address</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.address}}</h5>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.city}}</h5>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.state}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>
+                                    <h4 class="card-title">Phone number</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.phonenumber}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>
+                                    <h4 class="card-title">Bank account number</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.banknumber}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>
+                                    <h4 class="card-title">IFSC number</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.ifsc}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>
+                                    <h4 class="card-title">Bank branch</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.bankbranch}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>8</td>
+                                <td>
+                                    <h4 class="card-title">GST number</h4>
+                                </td>
+                                <td>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.gst}}</h5>
+                                </td>
+                                <td>
+                                    <input type="checkbox" value="">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="d-flex justify-content-end gap-2 p-4">
+                    <button class="right-button" [routerLink]="['/userapproval/pendingusers']">Approve</button>
+                    <button data-bs-toggle="modal" data-bs-target="#modalid">Reject</button>
                 </div>
             </div>
-            <div class="row justify-content-center px-4">
-                <div class="container center-container">
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test1" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">Image</h4>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test2" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">Email</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.email}}</h5>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test3" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">Address</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.address}}</h5>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.city}}</h5>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.state}}</h5>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test3" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">Phone number</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.phonenumber}}</h5>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test3" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">Bank account number</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.banknumber}}</h5>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test3" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">IFSC number</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.ifsc}}</h5>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test3" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">Bank branch</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.bankbranch}}</h5>
-                    </div>
-                    <br>
-                    <div class="item">
-                        <label>
-                            <input id="check" type="checkbox" value="test3" name="test" />
-                            <span class="checkbox"></span>
-                        </label>
-                        <h4 class="card-title">GST number</h4>
-                        <h5 class="card-subtitle text-muted mt-1">{{ts.gst}}</h5>
+
+            <div class="modal fade" id="modalid">
+                <div class="modal-dialog modal-dialog-center">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Reason for rejection</h5>
+                            <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <form>
+                            <div class="modal-body">
+                                <input type="text-box" placeholder="Description" />
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" data-bs-dismiss="modal"
+                                    [routerLink]="['/userapproval/pendingusers']">OK</button>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
-            </div>
-
-
-            <br>
-            <div class="d-flex justify-content-end gap-2 p-4">
-                <button class="right-button" [routerLink]="['/userapproval/pendingusers']">Approve</button>
-                <button data-bs-toggle="modal" data-bs-target="#modalid">Reject</button>
             </div>
         </div>
-        <div class="modal fade" id="modalid">
-            <div class="modal-dialog modal-dialog-center">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Reason for rejection</h5>
-                        <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <form>
-                        <div class="modal-body">
-                            <input type="text-box" placeholder="Description" />
-                        </div>
-                        <div class="modal-footer">
-                            <button type="submit" data-bs-dismiss="modal"
-                                [routerLink]="['/userapproval/pendingusers']">OK</button>
-                        </div>
-                    </form>
-
-                </div>
-            </div>
-        </div>
-    </div>
-
+    </form>
 </section>
