admin reject user

--- a/src/app/userapproval/pendingusers/pendingusers.component.html
+++ b/src/app/userapproval/pendingusers/pendingusers.component.html
@@ -53,7 +53,8 @@
                             </td>
                             <td>
                                 <button class="btn btn-light-primary btn-sm"
-                                    [routerLink]="['/det/userapproval/checklist/']"><i class="bi bi-info"></i></button>
+                                    [routerLink]="['/det/userapproval/checklist/',ts.userToken]"><i
+                                        class="bi bi-info"></i></button>
                             </td>
                         </ng-container>
                 </tbody>
