--- a/src/app/userapproval/checklist/checklist.component.html
+++ b/src/app/userapproval/checklist/checklist.component.html
@@ -1,5 +1,5 @@
-<section *ngFor='let ts of clinicdatalist'>
-    <form>
+<section class="container">
+    <form (ngSubmit)="onSubmit()" [formGroup]="form">
         <div class="card">
             <div class="card-body">
                 <!-- title -->
@@ -17,13 +17,13 @@
                                 <th class="text-dark font-medium fs-4">Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody *ngFor='let ts of user_data'>
                             <tr>
                                 <td>1</td>
                                 <td>
                                     <h4 class="card-title">Image</h4>
                                 </td>
-                                <td>Image</td>
+                                <td><img src="{{ts.image}}" alt="" style="height:60px ;"></td>
                                 <td>
                                     <input type="checkbox" value="">
                                 </td>
@@ -72,7 +72,7 @@
                                     <h4 class="card-title">Bank account number</h4>
                                 </td>
                                 <td>
-                                    <h5 class="card-subtitle text-muted mt-1">{{ts.banknumber}}</h5>
+                                    <h5 class="card-subtitle text-muted mt-1">{{ts.bankacnumber}}</h5>
                                 </td>
                                 <td>
                                     <input type="checkbox" value="">
@@ -119,7 +119,7 @@
                 </div>
 
                 <div class="d-flex justify-content-end gap-2 p-4">
-                    <button class="right-button" [routerLink]="['/userapproval/pendingusers']">Approve</button>
+                    <button class="right-button" type="submit">Approve</button>
                     <button data-bs-toggle="modal" data-bs-target="#modalid">Reject</button>
                 </div>
             </div>
@@ -131,12 +131,19 @@
                             <h5 class="modal-title">Reason for rejection</h5>
                             <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-                        <form>
+                        <form [formGroup]="reject_form">
                             <div class="modal-body">
-                                <input type="text-box" placeholder="Description" />
+                                <input type="text" formControlName="description" class="form-control"
+                                    [ngClass]="{ 'is-invalid': submitted && r['description'].errors }"
+                                    placeholder="Description" />
+                                <div *ngIf=" submitted && r['description'].errors" class="invalid-feedback">
+                                    <div *ngIf="r['description'].errors && r['description'].errors['required']">
+                                        Description is required</div>
+                                </div>
+
                             </div>
                             <div class="modal-footer">
-                                <button type="submit" data-bs-dismiss="modal"
+                                <button type="submit" (click)="Reject()" data-bs-dismiss="modal"
                                     [routerLink]="['/userapproval/pendingusers']">OK</button>
                             </div>
                         </form>
