--- a/src/app/userapproval/checklist/checklist.component.html
+++ b/src/app/userapproval/checklist/checklist.component.html
@@ -1,5 +1,5 @@
 <section class="container">
-    <form (ngSubmit)="onSubmit()" [formGroup]="form">
+    <form [formGroup]="form">
         <div class="card">
             <div class="card-body">
                 <!-- title -->
@@ -25,7 +25,8 @@
                                 </td>
                                 <td><img src="{{ts.image}}" alt="" style="height:60px ;"></td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="image" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['image'].errors }" value="">
                                 </td>
                             </tr>
                             <tr>
@@ -37,7 +38,9 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.email}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input formControlName="email" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['email'].errors }"
+                                        type="checkbox" value="0">
                                 </td>
                             </tr>
                             <tr>
@@ -51,7 +54,8 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.state}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="address" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['address'].errors }" value="">
                                 </td>
                             </tr>
                             <tr>
@@ -63,7 +67,9 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.phonenumber}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="phonenumber" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['phonenumber'].errors }"
+                                        value="">
                                 </td>
                             </tr>
                             <tr>
@@ -75,7 +81,9 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.bankacnumber}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="bankacnumber" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['bankacnumber'].errors }"
+                                        value="">
                                 </td>
                             </tr>
                             <tr>
@@ -87,7 +95,8 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.ifsc}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="ifsc" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['ifsc'].errors }" value="">
                                 </td>
                             </tr>
                             <tr>
@@ -99,7 +108,8 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.bankbranch}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="bankbranch" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['bankbranch'].errors }" value="">
                                 </td>
                             </tr>
                             <tr>
@@ -111,7 +121,8 @@
                                     <h5 class="card-subtitle text-muted mt-1">{{ts.gst}}</h5>
                                 </td>
                                 <td>
-                                    <input type="checkbox" value="">
+                                    <input type="checkbox" formControlName="gst" class="form-control"
+                                        [ngClass]="{ 'is-invalid': submiiterdform && f['gst'].errors }" value="">
                                 </td>
                             </tr>
                         </tbody>
@@ -119,38 +130,42 @@
                 </div>
 
                 <div class="d-flex justify-content-end gap-2 p-4">
-                    <button class="right-button" type="submit">Approve</button>
+                    <button class="right-button" (click)="onSubmit()">Approve</button>
                     <button data-bs-toggle="modal" data-bs-target="#modalid">Reject</button>
                 </div>
             </div>
 
-            <div class="modal fade" id="modalid">
-                <div class="modal-dialog modal-dialog-center">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Reason for rejection</h5>
-                            <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <form [formGroup]="reject_form">
-                            <div class="modal-body">
-                                <input type="text" formControlName="description" class="form-control"
-                                    [ngClass]="{ 'is-invalid': submitted && r['description'].errors }"
-                                    placeholder="Description" />
-                                <div *ngIf=" submitted && r['description'].errors" class="invalid-feedback">
-                                    <div *ngIf="r['description'].errors && r['description'].errors['required']">
-                                        Description is required</div>
-                                </div>
 
-                            </div>
-                            <div class="modal-footer">
-                                <button type="submit" (click)="Reject()" data-bs-dismiss="modal"
-                                    [routerLink]="['/userapproval/pendingusers']">OK</button>
-                            </div>
-                        </form>
-
-                    </div>
-                </div>
-            </div>
         </div>
     </form>
+
+
+
+    <div class="modal fade" id="modalid">
+        <div class="modal-dialog modal-dialog-center">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Reason for rejection</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form [formGroup]="reject_form">
+                    <div class="modal-body">
+                        <input type="text" formControlName="description" class="form-control"
+                            [ngClass]="{ 'is-invalid': submitted && r['description'].errors }"
+                            placeholder="Description" />
+                        <div *ngIf=" submitted && r['description'].errors" class="invalid-feedback">
+                            <div *ngIf="r['description'].errors && r['description'].errors['required']">
+                                Description is required</div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button (click)="Reject()" data-bs-dismiss="modal"
+                            [routerLink]="['/userapproval/pendingusers']">OK</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
 </section>
