--- a/src/app/userapproval/rejectedusers/rejectedusers.component.html
+++ b/src/app/userapproval/rejectedusers/rejectedusers.component.html
@@ -39,16 +39,16 @@
                                 {{ts.clinicid}}
                             </td>
                             <td>
-                                {{ts.clinicName}}
+                                {{ts.clinicDetails.clinicName}}
                             </td>
                             <td>
-                                {{ts.email}}
+                                {{ts.clinicDetails.email}}
                             </td>
                             <td>
-                                {{ts.address}}
+                                {{ts.clinicDetails.address}}
                             </td>
                             <td>
-                                {{ts.phonenumber}}
+                                {{ts.clinicDetails.phonenumber}}
                             </td>
                         </ng-container>
                 </tbody>
